[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support

# uncomment for hatchling
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plcd"
version = "0.1.6"
authors = [
  { name="LibreCS" },
]
description = "A lightweight PLC uptime monitor"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"

# uncomment for setuptools
# requires = ["setuptools>=43.0.0", "wheel"]
# build-backend = "setuptools.build_meta"
